[gd_scene load_steps=20 format=3 uid="uid://bv37gq72fhn1c"]

[ext_resource type="Script" path="res://scenes/matchmaking/matchmaking.gd" id="1_62mgw"]
[ext_resource type="Texture2D" uid="uid://dxcxogdwflpig" path="res://assets/gui/main/background.png" id="2_i2m6c"]
[ext_resource type="Shader" path="res://shaders/LightingBackground.gdshader" id="3_11mtd"]
[ext_resource type="PackedScene" uid="uid://bh1htbm1t4nlb" path="res://scenes/ui_elements/light_layer/light_layer.tscn" id="3_esan8"]
[ext_resource type="PackedScene" uid="uid://bpsr6id66vxk2" path="res://scenes/left_bar/left_bar.tscn" id="4_cayno"]
[ext_resource type="PackedScene" path="res://scenes/song_selection/song_selection_bg.tscn" id="5_pav4p"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="5_pdkhr"]
[ext_resource type="PackedScene" uid="uid://ba0n1dg0yxtpj" path="res://scenes/matches/matches.tscn" id="10_o03mo"]
[ext_resource type="PackedScene" uid="uid://dl4nx74f03pxd" path="res://scenes/ui_elements/glass_panel.tscn" id="10_t33hw"]
[ext_resource type="PackedScene" uid="uid://f6a8g2qh0dtg" path="res://scenes/ui_elements/line_edits/password_edit.tscn" id="12_cc6mp"]
[ext_resource type="PackedScene" uid="uid://b2ew1c3swawaj" path="res://scenes/instrument_selection/instrument_selection_item.tscn" id="12_dm5k6"]
[ext_resource type="PackedScene" uid="uid://b15ivw3lwhasd" path="res://scenes/ui_elements/basic_rounded_button_01.tscn" id="13_c55ko"]
[ext_resource type="PackedScene" uid="uid://r5oy8h4p8suy" path="res://scenes/song_selection/song_selection.tscn" id="13_tr8mu"]
[ext_resource type="PackedScene" uid="uid://cwr5sfnmp7808" path="res://scenes/ui_elements/square_button_01/square_button_01.tscn" id="14_a7kcl"]
[ext_resource type="Texture2D" uid="uid://be3ioc0v3w1yd" path="res://assets/gui/icons/close.svg" id="15_eqg2y"]
[ext_resource type="Script" path="res://scenes/matchmaking/join_failed_popup.gd" id="16_jjopf"]
[ext_resource type="FontFile" uid="uid://cl8syiom7jxno" path="res://fonts/Montserrat-Regular.ttf" id="17_qaosw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_prnqa"]
resource_local_to_scene = true
shader = ExtResource("3_11mtd")
shader_parameter/indicate = true
shader_parameter/size = null
shader_parameter/indicating_power = 1.0
shader_parameter/radius_base = 0.5
shader_parameter/static_power = 0.4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n47vw"]
bg_color = Color(0, 0, 0, 0.384314)

[node name="Matchmaking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-149, 500)
script = ExtResource("1_62mgw")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i2m6c")
stretch_mode = 6

[node name="LightLayer" parent="Background" instance=ExtResource("3_esan8")]
material = SubResource("ShaderMaterial_prnqa")
layout_mode = 1

[node name="SongSelectionBG" parent="." instance=ExtResource("5_pav4p")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="LeftBar" parent="HBoxContainer" instance=ExtResource("4_cayno")]
layout_mode = 2

[node name="Right" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MatchesContainer" type="MarginContainer" parent="HBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Right/MatchesContainer"]
layout_mode = 2

[node name="Left" type="MarginContainer" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left"]
layout_mode = 2

[node name="Actions" type="VBoxContainer" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Spacer3" type="Control" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Matches" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer" instance=ExtResource("10_o03mo")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer4" type="Control" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Right" type="MarginContainer" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="InstrumentBox" parent="HBoxContainer/Right/MatchesContainer/HBoxContainer/Right" instance=ExtResource("12_dm5k6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="SongSelection" parent="HBoxContainer/Right" instance=ExtResource("13_tr8mu")]
unique_name_in_owner = true
visible = false
layout_mode = 2
selection_mode = 1

[node name="PopupBG" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n47vw")

[node name="JoiningMatchPopup" type="MarginContainer" parent="PopupBG"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="PopupBG/JoiningMatchPopup"]
copy_mode = 2

[node name="glass_panel" parent="PopupBG/JoiningMatchPopup" instance=ExtResource("10_t33hw")]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PopupBG/JoiningMatchPopup/glass_panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_pdkhr")
theme_override_font_sizes/font_size = 50
text = "Joining Match"
horizontal_alignment = 1

[node name="JoinPasswordPopup" type="MarginContainer" parent="PopupBG"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="PopupBG/JoinPasswordPopup"]
position = Vector2(160, 140)
copy_mode = 2
rect = Rect2(0, 0, 800, 400)

[node name="Control" type="Control" parent="PopupBG/JoinPasswordPopup"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="glass_panel" parent="PopupBG/JoinPasswordPopup/Control" instance=ExtResource("10_t33hw")]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 800.0
offset_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PopupBG/JoinPasswordPopup/Control/glass_panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PopupBG/JoinPasswordPopup/Control/glass_panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="PopupBG/JoinPasswordPopup/Control/glass_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_pdkhr")
theme_override_font_sizes/font_size = 40
text = "Enter Join Password"
horizontal_alignment = 1

[node name="JoinPassword" parent="PopupBG/JoinPasswordPopup/Control/glass_panel/MarginContainer/VBoxContainer" instance=ExtResource("12_cc6mp")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Join Password"

[node name="JoinPasswordJoinButton" parent="PopupBG/JoinPasswordPopup/Control/glass_panel/MarginContainer/VBoxContainer" instance=ExtResource("13_c55ko")]
layout_mode = 2
size_flags_horizontal = 4
text = "Join Match
"

[node name="JoinPasswordCloseButton" parent="PopupBG/JoinPasswordPopup/Control" instance=ExtResource("14_a7kcl")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 52.0
grow_horizontal = 0
icon = ExtResource("15_eqg2y")
expand_icon = true

[node name="JoinFailedPopup" type="MarginContainer" parent="PopupBG"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("16_jjopf")

[node name="BackBufferCopy" type="BackBufferCopy" parent="PopupBG/JoinFailedPopup"]
position = Vector2(160, 140)
copy_mode = 2
rect = Rect2(0, 0, 800, 400)

[node name="Control" type="Control" parent="PopupBG/JoinFailedPopup"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="glass_panel" parent="PopupBG/JoinFailedPopup/Control" instance=ExtResource("10_t33hw")]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 800.0
offset_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PopupBG/JoinFailedPopup/Control/glass_panel"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="JoinFailedTitle" type="Label" parent="PopupBG/JoinFailedPopup/Control/glass_panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_pdkhr")
theme_override_font_sizes/font_size = 50
text = "failed to join match"
horizontal_alignment = 1

[node name="JoinFailedLabel" type="Label" parent="PopupBG/JoinFailedPopup/Control/glass_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("17_qaosw")
theme_override_font_sizes/font_size = 30
text = "failed to join match"
horizontal_alignment = 1

[node name="JoinFailedOkButton" parent="PopupBG/JoinFailedPopup/Control/glass_panel/VBoxContainer" instance=ExtResource("13_c55ko")]
layout_mode = 2
size_flags_horizontal = 4
text = "Ok
"

[connection signal="script_changed" from="." to="." method="_on_script_changed"]
[connection signal="create_match_pressed" from="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer/Matches" to="." method="_on_matches_create_match_pressed"]
[connection signal="join_not_allowed" from="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer/Matches" to="." method="_on_matches_join_not_allowed"]
[connection signal="match_selected" from="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer/Matches" to="." method="_on_matches_match_selected"]
[connection signal="protected_match_selected" from="HBoxContainer/Right/MatchesContainer/HBoxContainer/Left/VBoxContainer/Matches" to="." method="_on_matches_protected_match_selected"]
[connection signal="pressed" from="PopupBG/JoinPasswordPopup/Control/glass_panel/MarginContainer/VBoxContainer/JoinPasswordJoinButton" to="." method="_on_join_password_join_button_pressed"]
[connection signal="pressed" from="PopupBG/JoinPasswordPopup/Control/JoinPasswordCloseButton" to="." method="_on_join_password_close_button_pressed"]
[connection signal="pressed" from="PopupBG/JoinFailedPopup/Control/glass_panel/VBoxContainer/JoinFailedOkButton" to="." method="_on_join_failed_ok_button_pressed"]
